--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,10 +27,9 @@
             </div>
 
             <nav>
-              <a href="{{ site.baseurl }}/">Home</a>
-              <a href="{{ site.baseurl }}/getting-started">Getting Started</a>
-              <a href="{{ site.baseurl }}/search">Search</a>
-              <a href="{{ site.baseurl }}/about">About</a>
+              <a href="{{ site.baseurl }}/" style="margin-left: 0">Home</a>
+              <a href="{{ site.baseurl }}/syllabus">Syllabus</a>
+              <a href="{{ site.baseurl }}/schedule">Schedule</a>
             </nav>
           </header>
         </div>
