--- a/assets/style.scss
+++ b/assets/style.scss
@@ -45,7 +45,7 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 1.7;
   margin: 1em 0 15px;
   padding: 0;
-  text-align: center;
+  text-align: left;
 
   @include mobile {
     line-height: 1.4;
@@ -86,6 +86,7 @@ h4 {
 
 p {
   margin: 15px 0;
+  text-align: justify;
 }
 
 table {
