--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,19 +24,19 @@
       <div class="wrapper-masthead">
         <div class="container">
           <header class="masthead clearfix">
-            <a href="{{ site.baseurl }}/" ><img style="width:50px" src="{{ site.baseurl }}/images/ulogo.png" /></a>
+            <!-- <a href="{{ site.baseurl }}/" ><img style="width:50px" src="{{ site.baseurl }}/images/ulogo.png" /></a> -->
             <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.baseurl }}{{ site.avatar }}" /></a>
 
             <div class="site-info">
               <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
-              <p class="site-description">{{ site.description }}</p> 
+              <p class="site-description"><span><img style="width:30px" src="{{ site.baseurl }}/images/ulogo.png" />&nbsp; {{ site.description }}</span></p> 
             </div>
 
             <!--<a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.baseurl }}/images/ulogo.png" /></a> -->
 
             <nav>
               <a href="{{ site.baseurl }}/" style="margin-left: 0">Home</a>
-              <a href="{{ site.baseurl }}/syllabus">Syllabus</a>
+              <!-- <a href="{{ site.baseurl }}/syllabus">Syllabus</a> -->
               <a href="{{ site.baseurl }}/schedule">Schedule</a>
             </nav>
           </header>
