index info in cards

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
             <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.baseurl }}{{ site.avatar }}" /></a>
 
             <div class="site-info">
-              <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
+              <h1 class="site-name">{{ site.name }}</h1>
               <p class="site-description"><span><img style="width:30px" src="{{ site.baseurl }}/images/ulogo.png" />&nbsp; {{ site.description }}</span></p> 
             </div>
 
