--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,6 +38,7 @@
               <a href="{{ site.baseurl }}/" style="margin-left: 0">Home</a>
               <!-- <a href="{{ site.baseurl }}/syllabus">Syllabus</a> -->
               <a href="{{ site.baseurl }}/schedule">Schedule</a>
+              <a href="{{ site.baseurl }}/project">Project</a>
             </nav>
           </header>
         </div>
