--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
             <nav>
               <a href="{{ site.baseurl }}/" style="margin-left: 0">Home</a>
               <!-- <a href="{{ site.baseurl }}/syllabus">Syllabus</a> -->
-              <a href="{{ site.baseurl }}/schedule">Syllabus</a>
+              <a href="{{ site.baseurl }}/schedule">Syllabus/Schedule</a>
               <a href="{{ site.baseurl }}/project">Project</a>
             </nav>
           </header>
