--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,7 +58,7 @@
         </div>
       </div>
     </div>
-
+<img src="images/2kbit1_0.jpg"/>
     {% include analytics.html %}
   </body>
 </html>
